[package]
name = "many-abci"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "many-abci"
doc = false

[dependencies]
async-trait = "0.1.51"
ciborium = "0.2.0"
clap = { version = "3.0.0", features = ["derive"] }
coset = "0.3"
hex = "0.4.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-identity-webauthn = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-server = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "4a4de79e2e90a55b128584bc1d6e43b3415f8f14" }
reqwest = "0.11.11"
sha2 = "0.10.1"
signal-hook = "0.3.13"
smol = "1.2.5"
syslog-tracing = "0.1"
tendermint = "0.24.0-pre.2"
tendermint-abci = "0.24.0-pre.2"
tendermint-rpc = { version = "0.24.0-pre.2", features = [ "http-client" ] }
tendermint-proto = "0.24.0-pre.2"
tokio = { version = "1.13.0", features = [ "full" ] }
tracing = "0.1.28"
tracing-subscriber = "0.3"