[package]
name = "many-data"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }