[package]
name = "many-data"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "843336d86ef8b8ee4cb5b68659c630f58b9d7b4a" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "843336d86ef8b8ee4cb5b68659c630f58b9d7b4a" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "843336d86ef8b8ee4cb5b68659c630f58b9d7b4a" }
merk = { git = "https://github.com/liftedinit/merk.git", rev = "da0b660abbfd58abd4a942773f205d2c079f3b27" }
