[package]
name = "many-hwinfo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "many-hwinfo"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
many = { git = "ssh://git@github.com/l-1-labs/many-rs.git", rev = "bc3d0ee671c49eef95f9b068fb3a98a262dc62b5", features = ["pem"] }
sysinfo = "0.23.1"
sys-info = "0.9.1"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
