[package]
name = "many-hwinfo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "many-hwinfo"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
many = { git = "https://github.com/l-1-labs/many-rs.git", rev = "17e69a1d279e5eba8ad407e19dc921974e50f570", features = ["pem"] }
sysinfo = "0.23.1"
sys-info = "0.9.1"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
