[package]
name = "many-kvstore"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "many-kvstore"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
merk = { git = "https://github.com/liftedinit/merk.git", rev = "f45dde4dd0f5337acb0698da7fbb32d088d0ea9b" }
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-abci = { path = "../many-abci" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f", features = ["default", "serde"] }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-server = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
tracing = "0.1.28"
tracing-subscriber = "0.3"
tracing-syslog = { git = "https://github.com/max-heller/tracing-syslog.git", rev = "6ff222831d7a78f1068d4c8af94dea215b07f114" }

[dev-dependencies]
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f", features = ["default", "serde", "testing"] }
tempfile = "3.3.0"
