[package]
name = "many-kvstore"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "many-kvstore"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
merk = { git = "https://github.com/liftedinit/merk.git", rev = "da0b660abbfd58abd4a942773f205d2c079f3b27" }
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-abci = { path = "../many-abci" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891", features = ["default", "serde"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891", features = ["ed25519", "ecdsa"] }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }
many-server = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891" }
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.9.1"
simple_asn1 = "0.6.2"
tracing = "0.1.28"
tracing-subscriber = "0.3"
tracing-syslog = { git = "https://github.com/max-heller/tracing-syslog.git", rev = "6ff222831d7a78f1068d4c8af94dea215b07f114" }

[dev-dependencies]
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "647b729969d358198e80464b95a42ee58a203891", features = ["testing"] }
tempfile = "3.3.0"
