[package]
name = "many-kvstore"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "many-kvstore"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
coset = "0.3"
merk = { git = "https://github.com/liftedinit/merk.git", rev = "da0b660abbfd58abd4a942773f205d2c079f3b27" }
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.10.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699", features = ["default", "serde"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699", features = ["ed25519", "ecdsa"]  }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
many-server = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699" }
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.10.4"
signal-hook = "0.3.13"
simple_asn1 = "0.6.2"
strum = "0.24.1"
syslog-tracing = "0.1"
tokio = { version = "1.13.0", features = [ "full" ] }
tracing = "0.1.28"
tracing-subscriber = "0.3"

[dev-dependencies]
once_cell = "1.14.0"
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699", features = ["default", "serde", "testing"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "4ac94c58f66c9661b3bfbb50b40bc8d8cfc19699", features = [ "ed25519", "testing" ] }
tempfile = "3.3.0"

[build-dependencies]
vergen = "7"

