[package]
name = "many-ledger"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "many-ledger"
doc = false

[dependencies]
async-trait = "0.1.51"
base64 = "0.20.0-alpha.1"
bip39-dict = "0.1"
clap = { version = "3.0.0", features = ["derive"] }
coset = "0.3"
fixed = "1.11.0"
merk = { git = "https://github.com/liftedinit/merk.git", rev = "f45dde4dd0f5337acb0698da7fbb32d088d0ea9b" }
hex = "0.4.3"
itertools = "0.10.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-abci = { path = "../many-abci" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f", features = ["default", "serde"] }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-server = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
rand = "0.8"
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.9.1"
signal-hook = "0.3.13"
simple_asn1 = "0.5.4"
strum = "0.24.1"
tracing = "0.1.28"
tracing-subscriber = "0.3"
tracing-syslog = { git = "https://github.com/max-heller/tracing-syslog.git", rev = "6ff222831d7a78f1068d4c8af94dea215b07f114" }
typenum = "1.15.0"

[dev-dependencies]
once_cell = "1.12"
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "b18de2f5e4eff7039d43de41d8a82caec15d715f", features = ["default", "serde", "testing"] }
many-ledger = { path = ".", features = ["balance_testing"]}
proptest = "1"
tempfile = "3.3.0"

[build-dependencies]
vergen = "6"

[features]
balance_testing=[]
webauthn_testing=[]
