[package]
name = "many-ledger"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "many-ledger"
doc = false

[dependencies]
async-trait = "0.1.51"
base64 = "0.20.0-alpha.1"
bip39-dict = "0.1"
clap = { version = "3.0.0", features = ["derive"] }
coset = "0.3"
fixed = "1.11.0"
merk = { git = "https://github.com/liftedinit/merk.git", rev = "3d509c8efd3a68d85a5769f7fff300e10290d137" }
hex = "0.4.3"
itertools = "0.10.3"
json5 = "0.4.1"
linkme = { version = "0.3.5", features = ["used_linker"] }
num-bigint = "0.4.3"
num-traits = "0.2.14"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156", features = ["default", "serde"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156", features = ["ed25519", "ecdsa"]  }
many-identity-webauthn = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-migration = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-server = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
rand = "0.8"
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.9.1"
signal-hook = "0.3.13"
simple_asn1 = "0.6.2"
strum = "0.24.1"
syslog-tracing = "0.1"
tracing = "0.1.28"
tokio = { version = "1.24.1", features = [ "full" ] }
tracing-subscriber = "0.3"
typenum = "1.15.0"
typetag = "0.2.3"

[dev-dependencies]
once_cell = "1.12"
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156", features = ["default", "serde", "testing"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "aff83e38877fff6e9e6d10a74d2f29ac768dc156", features = [ "ed25519", "testing" ] }
many-ledger = { path = ".", features = ["balance_testing", "migration_testing"]}
proptest = "1"
tempfile = "3.3.0"

[build-dependencies]
vergen = "7"

[features]
balance_testing=[]
migration_testing=[]
webauthn_testing=[]
