[package]
name = "omni-abci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni-abci"
doc = false

[dependencies]
async-trait = "0.1.51"
ciborium = { git = "https://github.com/enarx/ciborium" }
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
lazy_static = "1.4.0"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
minicose = { git = "ssh://git@github.com/l-1-labs/rust-minicose.git" }
omni = { git = "ssh://git@github.com/l-1-labs/omni-rust.git" }
omni-client = { git = "ssh://git@github.com/l-1-labs/omni-rust.git" }
reqwest = "0.11.6"
sha2 = "0.10.1"
smol = "1.2.5"
tendermint = { git = "https://github.com/informalsystems/tendermint-rs.git" }
tendermint-abci = { git = "https://github.com/informalsystems/tendermint-rs.git" }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs.git", features = [ "http-client" ] }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs.git" }
tokio = { version = "1.13.0", features = [ "full" ] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
