[package]
name = "omni-echo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni-echo"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0-beta.5", features = [ "derive" ] }
omni = { git = "ssh://git@github.com/l-1-labs/omni-rust.git", features = [ "pem" ] }
pem = "1.0.0"
