[package]
name = "omni-hwinfo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni-hwinfo"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
omni = { git = "ssh://git@github.com/l-1-labs/omni-rust.git", features = [ "pem" ] }
sysinfo = "0.23.1"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
