[package]
name = "omni-ledger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni-ledger"
doc = false

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.0.0", features = ["derive"] }
fixed = "1.11.0"
fmerk = { git = "https://github.com/hansl/fmerk" }
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
omni = { git = "ssh://git@github.com/l-1-labs/omni-rust.git", features = [ "pem" ] }
omni-abci = { path = "../omni-abci" }
omni-kvstore = { path = "../omni-kvstore" }
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
typenum = "1.15.0"
