[package]
name = "many-ledger-test-utils"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
publish = false

[dependencies]
coset = "0.3"
cucumber = { version = "0.17.0", features = ["libtest"] }
itertools = "0.10.3"
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7", features = ["default", "serde", "testing"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7", features = ["ed25519", "ecdsa", "testing"]  }
many-ledger = { path = "..", features = ["balance_testing"] }
many-migration = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7", features = ["cucumber"] }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "ab09727a574d3abe734a374cd02e31aa6b3388f7", features = ["cucumber"] }
merk = { git = "https://github.com/liftedinit/merk.git", rev = "da0b660abbfd58abd4a942773f205d2c079f3b27" }
minicbor = { version = "0.18.0", features = ["derive", "std"] }
once_cell = "1.12"
proptest = "1"
serde_json = "1.0.72"
tempfile = "3.3.0"
many-ledger-test-macros = { path = "../test-macros" }
tracing = "0.1.28"
